--- a/acqirisApp/Db/acqiris_trigger.template
+++ b/acqirisApp/Db/acqiris_trigger.template
@@ -5,7 +5,7 @@
 ## Ssy		-	Secondary system
 ## Dev		-	Device name
 ## MODULE   -	#board / digitizer; "0" refers to the first digitizer found during initialization. \\
-                 \\For Acqiris crate and Concurrent CPU, it's the top slot(#5) if there's one digitizer in slot 5 
+##              For Acqiris crate and Concurrent CPU, it's the top slot(#5) if there's one digitizer in slot 5 
 
 record(ao,"${Psy}-${Ssy}{${Dev}}XTrigLevel1-SP")
 {
