--- a/acqirisApp/Db/Makefile
+++ b/acqirisApp/Db/Makefile
@@ -28,6 +28,9 @@ DB += acqiris_trigger.db
 DB += acqiris_module.db
 DB += iocStats.db
 
+DB_INSTALLS += $(EPICS_BASE)/db/iocAdminSoft.db
+DB_INSTALLS += $(EPICS_BASE)/db/save_restoreStatus.db
+
 #----------------------------------------------------
 # If <anyname>.db template is not named <anyname>*.template add
 # <anyname>_TEMPLATE = <templatename>
