the waveform length(NELM) can be changed during run-time and it's equal to samples/channel;waveform analysis(max, min, etc.) iterates on NELM instead of NOA; statically build the app with shared library(libAqDrv4.so) using 'SYS_LIBS'

--- a/acqirisApp/Db/Makefile
+++ b/acqirisApp/Db/Makefile
@@ -26,7 +26,7 @@ include $(TOP)/configure/CONFIG
 DB += acqiris_channel.db
 DB += acqiris_trigger.db
 DB += acqiris_module.db
-DB += iocStats.db
+#DB += iocStats.db
 
 DB_INSTALLS += $(EPICS_BASE)/db/iocAdminSoft.db
 DB_INSTALLS += $(EPICS_BASE)/db/save_restoreStatus.db
